[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"

[dev-dependencies]
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
http = "1.1.0"
serde_with = "3.9.0"
