[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
derive_builder = "0.20.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.7.5", features = ["query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.4"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["full"] }
http = "1.1.0"
serde_with = "3.9.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "fs",
    "net",
    "io-util",
] }
tokio-util = { version = "0.7.11", features = ["codec"] }
console-subscriber = "0.4.0"
dashmap = "6.0.1"
futures = "0.3.30"
sqlx = { version = "0.8.1", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
nanoid = "0.4.0"
